fix: gap in list-nav

--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    gap: 50px
 }
 
 .contact-info {
